samples/_failures_safe/1761040319_57aaf6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bc12c2f5.c: In function ‘main’:
./samples/SAFE/__tmp_bc12c2f5.c:129:5: error: expected expression at end of input
  129 |     return
      |     ^~~~~~
./samples/SAFE/__tmp_bc12c2f5.c:129:5: error: expected declaration or statement at end of input
